fixed aboutus for laptop, changed aligns in the top-offers section

--- a/pages/home_page/style.css
+++ b/pages/home_page/style.css
@@ -404,7 +404,7 @@ section {
 
 #ourteam {
 
-    scroll-margin-top: -10.5em;
+    scroll-margin-top: -8em;
     overflow-x: hidden;
     position: relative;
     width: 100%;
@@ -683,6 +683,9 @@ section {
         padding-block-end: 20px;
         text-decoration: none;
     }
+    #aboutus{
+        margin-inline: 20px;
+    }
     .aboutus-txt-img {
     scale: 0.95;
     }
@@ -762,17 +765,17 @@ section {
 }
 
 @media screen and (max-width: 1166px) and (min-width: 900px) {
-    .section {
-        padding-inline-start: 50px;
-        padding-inline-end: 50px;
+    .section{
+        padding-inline-start: 0px;
+        padding-inline-end: 0px;
     }
     /* SECTION 1 START */
     .textwithimage {
-        margin-right: 250px;
+        margin-right: 170px;
     }
 
     .textwithimage h1 {
-        font-size: 55px;
+        font-size: 50px;
         margin-block-end: 15px
     }
 
@@ -832,7 +835,7 @@ section {
     }
 
     .showall-button {
-        margin-inline-start: 196px;
+        margin-inline-start: 210px;
         display: flex;
         align-items: flex-end;
     }
@@ -846,28 +849,22 @@ section {
 
     .image-grid-section2 {
         margin-block: 150px;
-        row-gap: 50px;
-        column-gap: 40px;
-        padding-right: 60px;
-        grid-template-columns: auto auto auto;
+        row-gap: 40px;
+        padding-inline-start: 20px;
+        column-gap: 0px;
+        grid-template-columns: auto auto;
     }
 
     .image-grid-section2 img {
-        width: 100%;
-        min-width: 370px;
+        min-width: 100%;
     }
 
     .image-grid-section2 a {
         padding-block-end: 20px;
-    }
-
-    .image-grid-section2 img {
-        width: 100%;
-        min-width: 80%;
-    }    
+    } 
     #top-offer-grid-item {
-        width: 100%;
-        min-width: 80%
+        max-width: 400px;
+        min-width: 350px;
     
     }
     #img-cont-title {
@@ -885,30 +882,27 @@ section {
     /* SECTION 2  END*/
     /* SECTION 3 START */
     #aboutus {
-    overflow-x: hidden;
-    position: relative;
-    width: 100%;
-    height: auto;
-    display: block;
+    display: flex;
+    justify-content: center
     }
     
     .aboutus-txt-img {
         margin-block-start: 11.5em;
         margin-block-end: 12;
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         justify-content: center;
     }
     
     .aboutus-title-text {
         margin-inline-start: 0px;
-        padding-inline-start: 0px;
-        padding-inline-end: 290px;
+        padding-inline-start: 60px;
+        padding-inline-end: 0px;
         
     }
     
     .aboutus-title h1 {
-        font-size: 45px;
+        font-size: 50px;
         color: #091638;
         font-family: 'Merriweather';
     
@@ -926,14 +920,16 @@ section {
         padding-block-start: 30px;
     }
     .aboutus-img {
-        scale: 0.9;
-        margin-inline-start: 160px;
-        margin-inline-end: 0px;
+        margin-inline-end: 135px;
     }
     .aboutus-img img {
         min-width: 80%;
     }
-
+    #ourteam{
+        scale: 0.9;
+        max-width: 900px;
+        
+    }
     .ourteam-grid-avatars {
         padding-block: 50px;
         /* height: 630px; */
@@ -960,9 +956,13 @@ section {
         margin-block-start: 5px;
         font-size: 19px;
     }
-
+    #references{
+        padding-inline-start: 50px;
+        padding-inline-end: 50px;
+    }
     .references-box-with-txt {
         max-height: 500px;
+        align-items: center;
         min-height: 500px;
     }
 
